--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
           <div class="col  my-4 px-3 " >
             <div class="card pointer  w-100" style="background-color: #6f6969;border-radius: 20px; height: 200px;">
-              <div class="card-body d-flex justify-content-between">
+              <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
 
                 <div class="mr-1">
@@ -205,7 +205,7 @@
 
           <div class="col  my-4 px-3 " >
             <div class="card pointer  w-100" style="background-color: #e28887;border-radius: 20px; height: 200px;">
-              <div class="card-body d-flex justify-content-between">
+              <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
 
                 <div class="mr-1">
@@ -229,7 +229,7 @@
 
           <div class="col my-4 px-3 " >
             <div class="card pointer  w-100" style="background-color: #a5c4d8;border-radius: 20px; height: 200px;">
-              <div class="card-body d-flex justify-content-between">
+              <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
 
                 <div class="mr-1">
@@ -253,7 +253,7 @@
 
           <div class="col my-4 px-3" >
             <div class="card pointer  w-100" style="background-color: #93cab4;border-radius: 20px; height: 200px;">
-              <div class="card-body d-flex justify-content-between">
+              <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
 
                 <div class="mr-1">
@@ -277,7 +277,7 @@
 
           <div class="col my-4 px-3 " >
             <div class="card pointer  w-100" style="background-color: #3b9dc2;border-radius: 20px; height: 200px;">
-              <div class="card-body d-flex justify-content-between">
+              <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
 
                 <div class="mr-1">
@@ -300,7 +300,7 @@
 
           <div class="col my-4 px-3" >
             <div class="card pointer  w-100" style="background-color: #a0bf5a;border-radius: 20px; height: 200px;">
-              <div class="card-body d-flex justify-content-between">
+              <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
 
                 <div class="mr-1">
