--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     </section> -->
 
     <section class="container my-5" id="first_sec">
-        <div class="row row-cols-1 row-cols-md-3 justify-content-between">
+        <div class="row row-cols-2 row-cols-lg-3 justify-content-between">
 
           <div class="col  my-4 px-3 " >
             <div class="card pointer  w-100" style="background-color: #6f6969;border-radius: 20px; height: 200px;">
