--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="swiper-wrapper">
         
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-50" style="border-radius: 20px;background-color: #6f6969;height: 200px;">
-              <div data-swiper-parallax="-100" class="card-body d-flex justify-content-between">
+          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #6f6969;height: 300px;">
+              <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
                 <div class="mr-1">
@@ -58,8 +58,8 @@
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-50" style="border-radius: 20px;background-color: #e28887;height: 200px;">
-              <div data-swiper-parallax="-100" class="card-body d-flex justify-content-between">
+          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #e28887;height: 300px;">
+              <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
                 <div class="mr-1">
@@ -82,8 +82,8 @@
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-50" style="border-radius: 20px;background-color: #a5c4d8;height: 200px;">
-              <div data-swiper-parallax="-100" class="card-body d-flex justify-content-between">
+          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #a5c4d8;height: 300px;">
+              <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
                 <div class="mr-1">
@@ -106,8 +106,8 @@
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-50" style="border-radius: 20px;background-color: #93cab4;height: 200px;">
-              <div data-swiper-parallax="-100" class="card-body d-flex justify-content-between">
+          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #93cab4;height: 300px;">
+              <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
                 <div class="mr-1">
@@ -130,8 +130,8 @@
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-50" style="border-radius: 20px;background-color: #3b9dc2;height: 200px;">
-              <div data-swiper-parallax="-100" class="card-body d-flex justify-content-between">
+          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #3b9dc2;height: 300px;">
+              <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
                 <div class="mr-1">
