--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
     </section> -->
 
     <section class="container my-5" id="first_sec">
-        <div class="row row-cols-2 row-cols-lg-3 justify-content-between">
+        <div class="row row-cols-3 justify-content-between">
 
-          <div class="col  my-4 px-3 " >
+          <div class="col  my-4 px-1 " >
             <div class="card pointer  w-100" style="background-color: #6f6969;border-radius: 20px; height: 200px;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -337,7 +337,7 @@
             </div>
           </div>
 
-          <div class="col  my-4 px-3 " >
+          <div class="col  my-4 px-1 " >
             <div class="card pointer  w-100" style="background-color: #e28887;border-radius: 20px; height: 200px;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -361,7 +361,7 @@
             </div>
           </div>
 
-          <div class="col my-4 px-3 " >
+          <div class="col my-4 px-1 " >
             <div class="card pointer  w-100" style="background-color: #a5c4d8;border-radius: 20px; height: 200px;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -385,7 +385,7 @@
             </div>
           </div>
 
-          <div class="col my-4 px-3" >
+          <div class="col my-4 px-1" >
             <div class="card pointer  w-100" style="background-color: #93cab4;border-radius: 20px; height: 200px;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
