--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <div class="swiper-container" id="slider"> 
       <div class="parallax-bg" style="background-color: #efefef;" data-swiper-parallax="-23%"></div>
       <div class="swiper-wrapper">
+        <input hidden id="ds">
+        <input hidden id="ds2">
         
         <div class="swiper-slide d-flex" >
           <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #6f6969;height: 300px;">
