--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <input hidden id="ds2">
         
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #6f6969;height: 300px;">
+          <a href="./product.html" class="card mx-auto w-100" style="border-radius: 20px;background-color: #6f6969;height: 300px;">
               <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
@@ -56,11 +56,11 @@
               <img data-swiper-parallax="-1000" src="img/product.png" class="card-img-top" style="" alt="..." >
               <div class="card-body position-absolute Z-index-2">
               </div>
-          </div>
+            </a>
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #e28887;height: 300px;">
+          <a href="./product.html" class="card mx-auto w-100" style="border-radius: 20px;background-color: #e28887;height: 300px;">
               <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
@@ -80,11 +80,11 @@
               <img data-swiper-parallax="-1000" src="img/product.png" class="card-img-top" style="" alt="..." >
               <div class="card-body position-absolute Z-index-2">
               </div>
-          </div>
+            </a>
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #a5c4d8;height: 300px;">
+          <a href="./product.html" class="card mx-auto w-100" style="border-radius: 20px;background-color: #a5c4d8;height: 300px;">
               <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
@@ -104,11 +104,11 @@
               <img data-swiper-parallax="-1000" src="img/product.png" class="card-img-top" style="" alt="..." >
               <div class="card-body position-absolute Z-index-2">
               </div>
-          </div>
+            </a>
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #93cab4;height: 300px;">
+          <a href="./product.html" class="card mx-auto w-100" style="border-radius: 20px;background-color: #93cab4;height: 300px;">
               <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
@@ -128,11 +128,11 @@
               <img data-swiper-parallax="-1000" src="img/product.png" class="card-img-top" style="" alt="..." >
               <div class="card-body position-absolute Z-index-2">
               </div>
-          </div>
+            </a>
         </div>
 
         <div class="swiper-slide d-flex" >
-          <div class="card mx-auto w-100" style="border-radius: 20px;background-color: #3b9dc2;height: 300px;">
+          <a href="./product.html" class="card mx-auto w-100" style="border-radius: 20px;background-color: #3b9dc2;height: 300px;">
               <div  class="card-body d-flex justify-content-between">
                 <h4 class="text-light"> ريال 2500</h4>
 
@@ -151,7 +151,7 @@
               </div>
               <img data-swiper-parallax="-1000" src="img/product.png" class="card-img-top" style="" alt="..." >
               <div class="card-body position-absolute Z-index-2">
-              </div>
+              </a>
           </div>
         </div>
 
@@ -170,7 +170,7 @@
     <section class="container my-5 " id="first_sec">
         <div class="row row-cols-2 row-cols-md-3 d-flex justify-content-between flex-warp">
 
-          <div class="col  my-4 px-1 " >
+          <a href="./product.html" class="col  my-4 px-1 " >
             <div class="card pointer " style="background-color: #6f6969;border-radius: 20px; ;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -192,9 +192,9 @@
               <div class="card-body position-absolute Z-index-2">
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="col  my-4 px-1 " >
+          <a href="./product.html" class="col  my-4 px-1 " >
             <div class="card pointer  " style="background-color: #e28887;border-radius: 20px; ;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -216,9 +216,9 @@
               <div class="card-body position-absolute Z-index-2">
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="col my-4 px-1 " >
+          <a href="./product.html" class="col my-4 px-1 " >
             <div class="card pointer  " style="background-color: #a5c4d8;border-radius: 20px; ;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -240,9 +240,9 @@
               <div class="card-body position-absolute Z-index-2">
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="col my-4 px-1" >
+          <a href="./product.html" class="col my-4 px-1" >
             <div class="card pointer  " style="background-color: #93cab4;border-radius: 20px; ;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -264,9 +264,9 @@
               <div class="card-body position-absolute Z-index-2">
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="col my-4 px-1 " >
+          <a href="./product.html" class="col my-4 px-1 " >
             <div class="card pointer  " style="background-color: #3b9dc2;border-radius: 20px; ;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -287,9 +287,9 @@
               <div class="card-body position-absolute Z-index-2">
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="col my-4 px-1" >
+          <a href="./product.html" class="col my-4 px-1" >
             <div class="card pointer  " style="background-color: #a0bf5a;border-radius: 20px; ;">
               <div class="card-body px-3 d-flex justify-content-between">
                 <h5 class="text-light"> ريال 2500</h5>
@@ -311,7 +311,7 @@
               <div class="card-body position-absolute Z-index-2">
               </div>
             </div>
-          </div>
+          </a>
           
         </div>
     </section> 
