--- a/product.html
+++ b/product.html
@@ -35,7 +35,7 @@
       <div class="row row-cols-lg-2 row-cols-1">
 
   
-        <div class="big-img pr-2" style="position: relative;">
+        <div class="big-img pr-2" style="position: relative; background-image: url('img/bg.svg');">
           <a href="img/slider/flo.png" data-lightbox="roadtrip" class="gl"><img id="mainImgK" src="img/product.png" alt=""></a>
         </div>
 
